--- a/.github/workflows/application-tests.yml
+++ b/.github/workflows/application-tests.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v3.3.0
       - name: Run application tests
         env:
-          QUALITY_TIME_VERSION: v4.7.0-rc.8
+          QUALITY_TIME_VERSION: v4.7.0
           ENV: ci
         run: |
           mkdir -p build
