--- a/components/internal_server/Dockerfile
+++ b/components/internal_server/Dockerfile
@@ -1,7 +1,9 @@
-FROM python:3.11.2-bullseye AS compile-image
+FROM python:3.11.2-alpine3.17 AS compile-image
 
 WORKDIR /home/server
 
+RUN apk add --no-cache gcc=12.2.1_git20220924-r4 make=4.3-r1 libc-dev=0.7.2-r3 libffi-dev=3.4.4-r0
+# hadolint ignore=DL3059
 RUN python -m venv venv
 ENV PATH="/home/server/venv/bin:$PATH"
 COPY internal_server/requirements/requirements-base.txt /requirements-base.txt
@@ -13,17 +15,14 @@ COPY shared_data_model /home/shared_data_model/
 COPY shared_server_code /home/shared_server_code/
 RUN pip install --no-cache-dir -r /requirements-internal.txt
 
-FROM python:3.11.2-bullseye
+FROM python:3.11.2-alpine3.17
 
 LABEL maintainer="Quality-time team <quality-time@ictu.nl>"
 LABEL description="Quality-time internal server"
 
-RUN apt-get update && \
-    apt-get install --yes --no-install-recommends curl=7.74\* && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
-
-RUN useradd --create-home server
+RUN apk add --no-cache curl=7.87.0-r1
+# hadolint ignore=DL3059
+RUN adduser -S server
 WORKDIR /home/server
 USER server
 
