--- a/docker/docker-compose.ci.yml
+++ b/docker/docker-compose.ci.yml
@@ -34,10 +34,15 @@ services:
     ports:
       - "27017:27017"
   ldap:
-    build: ../components/ldap
+    image: bitnami/openldap:2.6.3
+    environment:
+      - LDAP_ADMIN_PASSWORD=admin
+      - LDAP_SKIP_DEFAULT_TREE=yes
+    volumes:
+      - '../components/ldap/ldifs:/ldifs'
     ports:
-      - "389:389"
-      - "636:636"
+      - "389:1389"
+      - "636:1636"
   renderer:
     build: ../components/renderer
     ports:
