--- a/docker/docker-compose.ci.yml
+++ b/docker/docker-compose.ci.yml
@@ -40,7 +40,7 @@ services:
       - LDAP_PORT_NUMBER=389
       - LDAP_SKIP_DEFAULT_TREE=yes
     volumes:
-      - '../components/ldap/ldifs:/ldifs'
+      - './ldap_ldifs:/ldifs'
     ports:
       - "389:389"
   renderer:
