--- a/docker/docker-compose.override.yml
+++ b/docker/docker-compose.override.yml
@@ -58,15 +58,21 @@ services:
     depends_on:
       - database
   ldap:
-    build: ../components/ldap
+    image: bitnami/openldap:2.6.3
+    environment:
+      - LDAP_ADMIN_PASSWORD=admin
+      - LDAP_PORT_NUMBER=389
+      - LDAP_SKIP_DEFAULT_TREE=yes
+    volumes:
+      - './ldap_ldifs:/ldifs'
     ports:
       - "389:389"
-      - "636:636"
   phpldapadmin:
     image: osixia/phpldapadmin:0.9.0
     environment:
+      - PHPLDAPADMIN_HTTPS=false
       - PHPLDAPADMIN_LDAP_HOSTS=ldap
-      - PHPLDAPADMIN_HTTPS=${PHPLDAPADMIN_HTTPS:-false}
+      - PHPLDAPADMIN_LDAP_CLIENT_TLS=false
     ports:
       - "3890:80"
     depends_on:
