--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -8,6 +8,8 @@ jobs:
   build:
     name: Trivy component analysis
     runs-on: ubuntu-latest
+    permissions:
+      security-events: write
     strategy:
       matrix:
         include:
