--- a/components/shared_server_code/pyproject.toml
+++ b/components/shared_server_code/pyproject.toml
@@ -7,7 +7,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "shared_server_code"
-version = "4.8.0-rc.2"
+version = "4.8.0"
 authors = [
   { name="Quality-time team", email="quality-time@ictu.nl" },
 ]
