Turn off request logging by the frontend container. Update serve. Closes #5654.

--- a/components/frontend/Dockerfile
+++ b/components/frontend/Dockerfile
@@ -9,11 +9,11 @@ WORKDIR /work
 COPY . /work
 RUN npm install -g npm@9.2.0 && \
     npm install && \
-    npm install -g serve@14.1.2 && \
+    npm install -g serve@14.2.0 && \
     npm run build
 
 HEALTHCHECK CMD curl -f http://localhost:${FRONTEND_PORT:-5000}/favicon.ico || exit 1
 
 # skipcq: DOK-DL3025
 # hadolint ignore=DL3025
-CMD serve --listen ${FRONTEND_PORT:-5000} --single build
+CMD serve --listen ${FRONTEND_PORT:-5000} --no-request-logging --single build
