In addition to making health check files group writeable for a configurable user to ease use in OpenShift, also make the user writing the files part of the group root. Further fixes #5310.

--- a/components/collector/Dockerfile
+++ b/components/collector/Dockerfile
@@ -18,10 +18,11 @@ LABEL maintainer="Quality-time team <quality-time@ictu.nl>"
 LABEL description="Quality-time collector"
 
 ENV HEALTH_CHECK_FILE=/home/collector/health_check.txt
-RUN adduser -S collector && touch ${HEALTH_CHECK_FILE} && chmod g+w ${HEALTH_CHECK_FILE}
+RUN adduser -S collector && adduser collector root
 WORKDIR /home/collector
 USER collector
 
+RUN touch ${HEALTH_CHECK_FILE} && chmod g+w ${HEALTH_CHECK_FILE} && chgrp root ${HEALTH_CHECK_FILE}
 HEALTHCHECK CMD python -c "from datetime import datetime as dt, timedelta; import sys; sys.exit(dt.now() - dt.fromisoformat(open('${HEALTH_CHECK_FILE}', encoding='utf-8').read().strip()) > timedelta(seconds=600))"
 
 COPY --from=compile-image /home/collector/venv /home/collector/venv
