--- a/components/notifier/Dockerfile
+++ b/components/notifier/Dockerfile
@@ -18,10 +18,11 @@ LABEL maintainer="Quality-time team <quality-time@ictu.nl>"
 LABEL description="Quality-time notifier"
 
 ENV HEALTH_CHECK_FILE=/home/notifier/health_check.txt
-RUN adduser -S notifier && touch ${HEALTH_CHECK_FILE} && chmod g+w ${HEALTH_CHECK_FILE}
+RUN adduser -S notifier && adduser notifier root
 WORKDIR /home/notifier
 USER notifier
 
+RUN touch ${HEALTH_CHECK_FILE} && chmod g+w ${HEALTH_CHECK_FILE} && chgrp root ${HEALTH_CHECK_FILE}
 HEALTHCHECK CMD python -c "from datetime import datetime as dt, timedelta; import sys; sys.exit(dt.now() - dt.fromisoformat(open('${HEALTH_CHECK_FILE}', encoding='utf-8').read().strip()) > timedelta(seconds=600))"
 
 COPY --from=compile-image /home/notifier/venv /home/notifier/venv
