--- a/components/shared_server_code/pyproject.toml
+++ b/components/shared_server_code/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "shared_server_code"
-version = "4.8.0"
+version = "4.9.0-rc.1"
 dependencies = [
     "bottle == 0.12.25",
     "cryptography == 40.0.1",
