--- a/tests/application_tests/pyproject.toml
+++ b/tests/application_tests/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "application_tests"
-version = "4.8.0"
+version = "4.9.0-rc.1"
 dependencies = [
     "requests==2.28.2",
     "selenium==4.8.3"
