--- a/.github/workflows/application-tests.yml
+++ b/.github/workflows/application-tests.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v3.5.0
       - name: Run application tests
         env:
-          QUALITY_TIME_VERSION: v4.9.0-rc.2
+          QUALITY_TIME_VERSION: v4.9.0
           ENV: ci
         run: |
           mkdir -p build
