--- a/components/collector/pyproject.toml
+++ b/components/collector/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "collector"
-version = "4.9.0-rc.2"
+version = "4.9.0"
 dependencies = [
     "aiogqlc==3.1.0",
     "aiohttp==3.8.4",
