--- a/docs/pyproject.toml
+++ b/docs/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "docs"
-version = "4.9.0-rc.2"
+version = "4.9.0"
 dependencies = [
     "furo==2023.3.27",
     "gitpython==3.1.31",
