--- a/docs/pyproject.toml
+++ b/docs/pyproject.toml
@@ -7,7 +7,7 @@ dependencies = [
     "myst-parser==1.0.0",
     "Sphinx==6.1.3",
     "sphinx-copybutton==0.5.2",
-    "sphinx_design==0.4.1",
+    "sphinx_design==0.4.1"
 ]
 
 [project.optional-dependencies]
