--- a/components/shared_data_model/pyproject.toml
+++ b/components/shared_data_model/pyproject.toml
@@ -7,23 +7,27 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
-    "bandit==1.7.5",
-    "black==23.3.0",
     "coverage==7.2.3",
-    "dlint==0.14.1",
-    "mypy==1.2.0",
     "pep8-naming==0.13.3",
     "pip==23.1",
-    "pip-audit==2.5.4",
+    "pipx==1.2.0",
     "pip-tools==6.13.0",  # To add hashes to requirements
     "pylint==2.17.2",
-    "safety==2.4.0b1",  # The beta of safety 2.4.0 fixes a dependency conflict with packaging 23.0.
     "unittest-xml-reporting==3.2.0",  # Needed to generate JUnit XML output for Sonarcloud.io
+]
+tools = [
+    "bandit==1.7.5",
+    "black==23.3.0",
+    "dlint==0.14.1",
+    "mypy==1.2.0",
+    "pip-audit==2.5.4",
+    "pydantic==1.10.7",
+    "safety==2.3.5",
     "vulture==2.7"
 ]
 
-[tool.setuptools.packages.find]
-where = ["src"]
+[tool.black]
+line-length = 120
 
 [tool.mypy]
 plugins = "pydantic.mypy"
@@ -33,3 +37,6 @@ warn_redundant_casts = true
 warn_return_any = true
 warn_unreachable = true
 warn_unused_ignores = true
+
+[tool.setuptools.packages.find]
+where = ["src"]
