Have Dependabot only update direct pip dependencies.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,7 +13,7 @@ updates:
     interval: weekly
     time: "04:10"
   allow:
-    - dependency-type: "all"
+    - dependency-type: "direct"
   open-pull-requests-limit: 100
 
 - package-ecosystem: docker
@@ -59,7 +59,7 @@ updates:
     interval: weekly
     time: "04:40"
   allow:
-    - dependency-type: "all"
+    - dependency-type: "direct"
   open-pull-requests-limit: 100
 
 - package-ecosystem: docker
@@ -112,7 +112,7 @@ updates:
     interval: weekly
     time: "05:10"
   allow:
-    - dependency-type: "all"
+    - dependency-type: "direct"
   open-pull-requests-limit: 100
 
 - package-ecosystem: docker
@@ -131,7 +131,7 @@ updates:
     interval: weekly
     time: "05:20"
   allow:
-    - dependency-type: "all"
+    - dependency-type: "direct"
   open-pull-requests-limit: 100
 
 - package-ecosystem: pip
@@ -140,7 +140,7 @@ updates:
     interval: weekly
     time: "05:25"
   allow:
-    - dependency-type: "all"
+    - dependency-type: "direct"
   open-pull-requests-limit: 100
 
 - package-ecosystem: pip
@@ -149,7 +149,7 @@ updates:
     interval: weekly
     time: "05:30"
   allow:
-    - dependency-type: "all"
+    - dependency-type: "direct"
   open-pull-requests-limit: 100
 
 - package-ecosystem: docker
@@ -175,7 +175,7 @@ updates:
     interval: weekly
     time: "05:45"
   allow:
-    - dependency-type: "all"
+    - dependency-type: "direct"
   open-pull-requests-limit: 100
 
 - package-ecosystem: pip
@@ -184,7 +184,7 @@ updates:
     interval: weekly
     time: "05:50"
   allow:
-    - dependency-type: "all"
+    - dependency-type: "direct"
   open-pull-requests-limit: 100
 
 - package-ecosystem: pip
@@ -193,7 +193,7 @@ updates:
     interval: weekly
     time: "05:55"
   allow:
-    - dependency-type: "all"
+    - dependency-type: "direct"
   open-pull-requests-limit: 100
 
 - package-ecosystem: pip
@@ -202,5 +202,5 @@ updates:
     interval: weekly
     time: "06:00"
   allow:
-    - dependency-type: "all"
+    - dependency-type: "direct"
   open-pull-requests-limit: 100
