Squash commits for 5790
Gets the Reports directly from the database

Adapts tests so they work with new situation

Needs shared server code

Adds some tests for database interfacing.

Adds mongomock

Removes superfluous methods and imports from notifier.

Adds some fixtures

Tests return reports

Adds deleted to fixture and test

Adds tests for recent measurements.

Adds tests and method for metrics

Adds a method for getting metrics from reports and tests this
Tests for getting recent measurements

Adds two missed tests

Updates requirements to include mongomock.

Fixes mypy issues.

Fixes pylint issues

Removes duplication

Update components/notifier/tests/fixtures.py

Remove superfluous parameters from method.

--- a/components/notifier/Dockerfile
+++ b/components/notifier/Dockerfile
@@ -7,6 +7,7 @@ ENV PATH="/home/notifier/venv/bin:$PATH"
 COPY notifier/requirements/requirements.txt /requirements.txt
 RUN pip install --no-cache-dir --require-hashes -r /requirements.txt
 COPY shared_data_model /home/shared_data_model/
+COPY shared_server_code /home/shared_server_code/
 COPY notifier/requirements/requirements-internal.txt /requirements-internal.txt
 RUN pip install --no-cache-dir -r /requirements-internal.txt
 
@@ -26,6 +27,8 @@ HEALTHCHECK CMD python -c "from datetime import datetime as dt, timedelta; impor
 COPY --from=compile-image /home/notifier/venv /home/notifier/venv
 COPY notifier/src /home/notifier
 COPY shared_data_model /home/shared_data_model
+# TODO: Move database code from shared_server_code to shared_data_model.
+COPY shared_server_code /home/shared_server_code
 
 ENV PATH="/home/notifier/venv/bin:$PATH"
 CMD ["python", "/home/notifier/quality_time_notifier.py"]
