--- a/docs/pyproject.toml
+++ b/docs/pyproject.toml
@@ -5,7 +5,7 @@ dependencies = [
     "furo==2023.3.27",
     "gitpython==3.1.31",
     "myst-parser==1.0.0",
-    "Sphinx==5.3.0",  # Can't upgrade to Sphinx 6 because sphinx-copybutton 0.5.1 requires Sphinx < 6.
+    "Sphinx==6.1.3",
     "sphinx-copybutton==0.5.2",
     "sphinx_design==0.4.1",
 ]
