No need to install dependencies for generating mypy HTML reports if they are not used.

--- a/components/notifier/requirements/requirements-dev.txt
+++ b/components/notifier/requirements/requirements-dev.txt
@@ -536,9 +536,7 @@ lxml==4.9.2 \
     --hash=sha256:efa29c2fe6b4fdd32e8ef81c1528506895eca86e1d8c4657fda04c9b3786ddf9 \
     --hash=sha256:f1496ea22ca2c830cbcbd473de8f114a320da308438ae65abad6bab7867fe38f \
     --hash=sha256:f49e52d174375a7def9915c9f06ec4e569d235ad428f70751765f48d5926678c
-    # via
-    #   notifier (pyproject.toml)
-    #   unittest-xml-reporting
+    # via unittest-xml-reporting
 markdown-it-py==2.2.0 \
     --hash=sha256:5a35f8d1870171d9acc47b99612dc146129b631baf04970128b568f190d0cc30 \
     --hash=sha256:7c9a5e412688bc771c67432cbfebcdd686c93ce6484913dccf06cb5a0bea35a1
