--- a/components/shared_server_code/pyproject.toml
+++ b/components/shared_server_code/pyproject.toml
@@ -4,33 +4,36 @@ version = "4.9.0"
 dependencies = [
     "bottle==0.12.25",
     "cryptography==40.0.2",
-    "packaging==23.0",
+    "packaging==23.1",
     "pydantic==1.10.7",
     "pymongo==4.3.3"
 ]
 
 [project.optional-dependencies]
 dev = [
-    "bandit==1.7.5",
-    "black==23.3.0",
     "coverage==7.2.3",
-    "dlint==0.14.1",
-    "mypy==1.2.0",
     "pep8-naming==0.13.3",
     "pip==23.1",
-    "pip-audit==2.5.4",
+    "pipx==1.2.0",
     "pip-tools==6.13.0",  # To add hashes to requirements
     "pylint==2.17.2",
-    "safety==2.4.0b1",  # The beta of safety 2.4.0 fixes a dependency conflict with packaging 23.0.
     "unittest-xml-reporting==3.2.0",  # Needed to generate JUnit XML output for Sonarcloud.io
+]
+tools = [
+    "bandit==1.7.5",
+    "black==23.3.0",
+    "dlint==0.14.1",
+    "mypy==1.2.0",
+    "pip-audit==2.5.4",
+    "pydantic==1.10.7",
+    "safety==2.3.5",
     "vulture==2.7"
 ]
 
-[tool.setuptools.packages.find]
-where = ["src"]
+[tool.black]
+line-length = 120
 
 [tool.mypy]
-plugins = "pydantic.mypy"
 ignore_missing_imports = false
 incremental = false
 warn_redundant_casts = true
@@ -44,3 +47,6 @@ module = [
     "bottle"
 ]
 ignore_missing_imports = true
+
+[tool.setuptools.packages.find]
+where = ["src"]
